# halo2-distributed

./: Cargo.toml  docker-compose.yml
dispatcher/: Cargo.toml
docker/: dispatcher.dockerfile  docker-compose.yml  worker.dockerfile
halo2_gadgets_distributed/: Cargo.toml
halo2_gadgets_distributed/benches/: poseidon.rs  sha256.rs
halo2_gadgets_distributed/src/: ecc.rs  lib.rs  poseidon.rs  sha256.rs  sinsemilla.rs  utilities.rs
halo2_gadgets_distributed/src/ecc/: chip.rs
halo2_gadgets_distributed/src/ecc/chip/: add.rs  add_incomplete.rs  constants.rs  mul.rs  mul_fixed.rs  witness_point.rs
halo2_gadgets_distributed/src/ecc/chip/mul/: complete.rs  incomplete.rs  overflow.rs
halo2_gadgets_distributed/src/ecc/chip/mul_fixed/: base_field_elem.rs  full_width.rs  short.rs
halo2_gadgets_distributed/src/poseidon/: pow5.rs  primitives.rs
halo2_gadgets_distributed/src/poseidon/primitives/: grain.rs  p128pow5t3.rs
halo2_gadgets_distributed/src/sha256/: table16.rs
halo2_gadgets_distributed/src/sha256/table16/: compression.rs  gates.rs  message_schedule.rs  spread_table.rs  util.rs
halo2_gadgets_distributed/src/sha256/table16/compression/: compression_gates.rs  (+4 more)
halo2_gadgets_distributed/src/sinsemilla/: chip.rs  merkle.rs  message.rs  primitives.rs
halo2_gadgets_distributed/src/sinsemilla/chip/: generator_table.rs  hash_to_point.rs
halo2_gadgets_distributed/src/sinsemilla/merkle/: chip.rs
halo2_gadgets_distributed/src/utilities/: cond_swap.rs  decompose_running_sum.rs  lookup_range_check.rs
halo2_proofs/: Cargo.toml
halo2_proofs/src/: arithmetic.rs  lib.rs  multimachine.rs
halo2_proofs/src/distributed/: dispatcher.rs  utils.rs
halo2_proofs/src/distributed/net/: mod.rs
halo2_proofs/src/distributed/plonk/: mod.rs
halo2_proofs/src/plonk/: evaluation.rs  keygen.rs  permutation.rs  prover.rs
halo2_proofs/src/plonk/permutation/: keygen.rs
halo2_proofs_distributed/: Cargo.toml
halo2_proofs_distributed/benches/: arithmetic.rs  commit_zk.rs  dev_lookup.rs  fft.rs  hashtocurve.rs  plonk.rs
halo2_proofs_distributed/examples/: circuit-layout.rs  cost-model.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple-example.rs  two-chip.rs  vector-mul.rs
halo2_proofs_distributed/src/: arithmetic.rs  dev.rs  dispatcher.rs  helpers.rs  lib.rs  multimachine.rs  utils.rs
halo2_proofs_distributed/src/circuit/: value.rs
halo2_proofs_distributed/src/dev/: gates.rs
halo2_proofs_distributed/src/dev/graph/: layout.rs
halo2_proofs_distributed/src/distributed_util/: dispatcher.rs  mod.rs
halo2_proofs_distributed/src/distributed_util/plonk/permutation/: keygen.rs
halo2_proofs_distributed/src/plonk/: circuit.rs  evaluation.rs  keygen.rs  mod.rs  prover.rs
halo2_proofs_distributed/src/plonk/permutation/: keygen.rs
halo2_proofs_distributed/src/poly/kzg/multiopen/shplonk/: prover.rs
halo2_proofs_distributed/tests/: plonk_api.rs
halo2_worker/: Cargo.toml
halo2_worker/src/: main.rs  message_passing.rs
worker/: Cargo.toml
worker/src/: main.rs
(+8 files in other folders)
