[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["codec"] }
serde          = "1.0"
serde_json     = "1.0"
serde_derive   = "1.0"
futures = { version = "0.3.0", features = ["thread-pool"]}
strum = { version = "0.25", features = ["derive"] }
stubborn-io = "0.3.2"
num_enum = "0.7.0"
once_cell = "1.18.0"
halo2_proofs = { path = "../halo2_proofs" }
